Updates css to fix word wrap issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -117,11 +117,13 @@ p.summary-text {
 
 .project-title-container {
     min-width: 250px;
+    max-width: 250px;
 }
 
 .project-desc-container {
     margin: 0 25px 0 25px;
     min-width: 550px;
+    max-width: 550px;
 }
 
 .project-header {
